[FakeRestApi project] - general housekeeping